Removed unnecessary modules and changed 'go' command to simply pick a random move.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,14 +3,12 @@ CC = gcc
 CFLAGS = -pthread -lm -Wall -O3 -flto -Wno-unused-local-typedefs
 CFLAGSDEBUG = -DNDEBUG
 
-.PHONY: default all debug tune clean
+.PHONY: default all debug clean
 
 default: $(TARGET)
 all: default
-debug: CFLAGSDEBUG := 
-tune: CFLAGS += -DTUNE
+debug: CFLAGSDEBUG :=
 debug: default
-tune: default
 
 OBJECTS = $(patsubst %.c, %.o, $(wildcard *.c))
 HEADERS = $(wildcard *.h)
