Now use builtins for bbPopCount and bbScanForward.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,18 @@
 TARGET = robocide
 CC = gcc
-CFLAGS = -pthread -Wall -O3 -flto -Wno-unused-local-typedefs
+CFLAGS = -pthread -Wall -O3 -flto -Wno-unused-local-typedefs -march=native
 LFLAGS = -lm
+CFLAGSNOBUILTIN = -DBUILTINS
 CFLAGSDEBUG = -DNDEBUG
 
-.PHONY: default all debug tune clean
+.PHONY: default all nobuiltin debug tune clean
 
 default: $(TARGET)
 all: default
+nobuiltin: CFLAGSNOBUILTIN :=
 debug: CFLAGSDEBUG :=
 tune: CFLAGS += -DTUNE
+nobuiltin: default
 debug: default
 tune: default
 
@@ -17,12 +20,12 @@ OBJECTS = $(patsubst %.c, %.o, $(wildcard *.c))
 HEADERS = $(wildcard *.h)
 
 %.o: %.c $(HEADERS)
-	$(CC) $(CFLAGS) $(CFLAGSDEBUG) -c $< -o $@
+	$(CC) $(CFLAGS) $(CFLAGSDEBUG) $(CFLAGSNOBUILTIN) -c $< -o $@
 
 .PRECIOUS: $(TARGET) $(OBJECTS)
 
 $(TARGET): $(OBJECTS)
-	$(CC) $(OBJECTS) $(CFLAGS) $(CFLAGSDEBUG) -o $@ $(LFLAGS)
+	$(CC) $(OBJECTS) $(CFLAGS) $(CFLAGSDEBUG) $(CFLAGSNOBUILTIN) -o $@ $(LFLAGS)
 
 clean:
 	@rm -f *.o
